@@ -447,6 +447,7 @@ topic.category.subcategories=Sub-categories for category &quot;{0}&quot;
 topic.category.topics=Topics in category &quot;{0}&quot;
 topic.file.download=View/Download this file
 topic.filehistory=File History
+topic.filesize.bytes={0} bytes
 topic.ismentionedon=is mentioned on\:
 topic.notcreated=The topic "{0}" does not currently exist.  To create it please follow the link\: {1}.
 topic.redirect.from=Redirected from {0}
