@@ -19,35 +19,36 @@
 
 <c:if test="${empty notopic}">
 	<c:if test="${!empty topicObject}">
-<div id="content-article">
-<c:if test="${topicImage}"><jamwiki:image value="${topicObject.name}" /></c:if>
-<c:if test="${topicFile}"><div id="topic-file-download"><fmt:message key="topic.file.download" />:&#160;<a href="<c:out value="${fileVersions[0].url}" />"><c:out value="${topicObject.name}" /></a></div></c:if>
-<c:out value="${topicObject.topicContent}" escapeXml="false" />
-</div>
-<div class="clear"></div>
+		<div id="content-article">
+		<c:if test="${topicImage}"><jamwiki:image value="${topicObject.name}" /></c:if>
+		<c:if test="${topicFile}"><div id="topic-file-download"><fmt:message key="topic.file.download" />:&#160;<a href="<c:out value="${fileVersions[0].url}" />"><c:out value="${topicObject.name}" /></a></div></c:if>
+		<c:out value="${topicObject.topicContent}" escapeXml="false" />
+		</div>
+		<div class="clear"></div>
 		<c:if test="${!empty fileVersions}">
-<h2><fmt:message key="topic.filehistory" /></h2>
-<ul>
-			<c:forEach items="${fileVersions}" var="fileVersion">
-<li>
-<a href="<c:out value="${fileVersion.url}" />"><fmt:formatDate value="${fileVersion.uploadDate}" type="both" pattern="dd-MMM-yyyy HH:mm" /></a>
-&#160;(<c:out value="${fileVersion.fileSize}" /> bytes)
+			<h2><fmt:message key="topic.filehistory" /></h2>
+			<ul>
+				<c:forEach items="${fileVersions}" var="fileVersion">
+				<li>
+				<a href="<c:out value="${fileVersion.url}" />"><fmt:formatDate value="${fileVersion.uploadDate}" type="both" pattern="dd-MMM-yyyy HH:mm" /></a>
+				&#160;(<fmt:message key="topic.filesize.bytes"><fmt:param value="${fileVersion.fileSize}" /></fmt:message>)
+				&#160;.&#160;.&#160;
+				<jamwiki:link value="User:${fileVersion.authorDisplay}" text="${fileVersion.authorDisplay}" />
+				(<jamwiki:link value="User comments:${fileVersion.authorDisplay}"><fmt:message key="recentchanges.caption.comments" /></jamwiki:link>&#160;|&#160;<jamwiki:link value="Special:Contributions"><jamwiki:linkParam key="contributor" value="${fileVersion.authorDisplay}" /><fmt:message key="recentchanges.caption.contributions" /></jamwiki:link>)
 				<c:if test="${!empty fileVersion.uploadComment}">&#160;(<i><c:out value="${fileVersion.uploadComment}" /></i>)</c:if>
-</li>
-			</c:forEach>
-</ul>
+				</li>
+				</c:forEach>
+			</ul>
 		</c:if>
 	</c:if>
-
 	<%@ include file="category-include.jsp" %>
-
 	<c:if test="${!empty categories}">
-<div id="category-index"><jamwiki:link value="Special:Categories"><fmt:message key="topic.categories" /></jamwiki:link>:
+		<div id="category-index"><jamwiki:link value="Special:Categories"><fmt:message key="topic.categories" /></jamwiki:link>:
 		<c:forEach items="${categories}" var="category" varStatus="status">
-<c:if test="${!status.first}">&#160;|&#160;</c:if><jamwiki:link value="${category.key}" text="${category.value}" />
+			<c:if test="${!status.first}">&#160;|&#160;</c:if><jamwiki:link value="${category.key}" text="${category.value}" />
 		</c:forEach>
-</div>
-<div class="clear"></div>
+		</div>
+		<div class="clear"></div>
 	</c:if>
 </c:if>
 <c:if test="${!empty notopic}">
